fixing issues where user cant see album information when hover on mobile devices

--- a/main.css
+++ b/main.css
@@ -173,6 +173,7 @@ button:hover {
   flex-basis: 300px;
   text-align: center;
   position: relative;
+  z-index: 1;
 }
 .album-img img {
   width: 100%;
@@ -192,10 +193,7 @@ button:hover {
   width: 100%;
   opacity: 0;
   transition: 0.5s ease;
-  /* background-color: rgba(156, 155, 155, 0.568); */
-
-  background-color: rgba(254, 13, 0, 0.69);
-  z-index: 1;
+  background-color: rgba(156, 155, 155, 0.568);
 }
 
 .album-img:hover img {
